dependencyをつけてみた

--- a/.github/workflows/chapter1_build.yml
+++ b/.github/workflows/chapter1_build.yml
@@ -16,6 +16,7 @@ jobs:
           go test -v
 
   go_build:
+    needs: go_test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
